// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditions translation should translate "application has exited" line 1`] = `
Object {
  "children": Array [],
  "title": Object {
    "type": "text",
    "value": "Application has exited",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "cookie" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "my-cookieval1",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "my-cookie<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ") cookie\`)}",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "!=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expectedval2",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "expected<%var2%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Object {
    "type": "text",
    "value": "Cookie",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "current location" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "URL",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expected val1",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "expected <%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Object {
    "type": "text",
    "value": "Current location",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "element does not exist" line 1`] = `
Object {
  "children": Array [],
  "title": Object {
    "children": Array [
      Object {
        "type": "bold",
        "value": "Element 1",
      },
      Object {
        "type": "text",
        "value": " does not exist",
      },
    ],
    "type": "text-fragment",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "element exists" line 1`] = `
Object {
  "children": Array [],
  "title": Object {
    "children": Array [
      Object {
        "type": "bold",
        "value": "video",
      },
      Object {
        "type": "text",
        "value": " exists",
      },
    ],
    "type": "text-fragment",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "element is visible" line 1`] = `
Object {
  "children": Array [],
  "title": Object {
    "children": Array [
      Object {
        "type": "bold",
        "value": "My element",
      },
      Object {
        "type": "text",
        "value": " element is visible",
      },
    ],
    "type": "text-fragment",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS" line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Object {
        "type": "text",
        "value": "JavaScript matcher",
      },
      "type": "code-block",
      "value": "thisIsJS(\\"val1\\");",
    },
    Object {
      "label": Object {
        "type": "text",
        "value": "With variables",
      },
      "type": "code-block",
      "value": "thisIsJS(\\"<%var1%>\\");",
    },
  ],
  "title": Object {
    "children": Array [
      Object {
        "type": "code",
        "value": "{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}",
      },
      Object {
        "type": "text",
        "value": " matches JavaScript",
      },
    ],
    "type": "text-fragment",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "element properties" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "video position",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": ">=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "height",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123 ± 3",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "123 ± <%var3%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "text",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expected text",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Object {
    "children": Array [
      Object {
        "type": "text",
        "value": "Unknown element (",
      },
      Object {
        "type": "code",
        "value": "unkn...n-id",
      },
      Object {
        "type": "text",
        "value": ") properties",
      },
    ],
    "type": "text-fragment",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request matching URL was not made excluding previously matched" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "URL matching",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "/partial/url/val1",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "/partial/url/<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Previously matched",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "No",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request name.slice(1)",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "GET",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request header ",
                },
                Object {
                  "type": "bold",
                  "value": "Accept-Type",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "text/javascript",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request name.slice(1)",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "request val2 body",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "request <%var2%> body",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response name.slice(1)",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": ">",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response header ",
                },
                Object {
                  "type": "bold",
                  "value": "Content-val1",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "Content-<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "ends with",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "val2/javascript",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "<%var2%>/javascript",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response name.slice(1)",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "response <%non_existing_var%> <%kind-of|var but not%> body",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Object {
        "type": "text",
        "value": "Network request properties",
      },
      "type": "table",
    },
  ],
  "title": Object {
    "type": "text",
    "value": "Network request was not made",
  },
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request to URL was made including matched" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "URL",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "http://suite.st/val1",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "http://suite.st/<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Previously matched",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "Yes",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Object {
    "type": "text",
    "value": "Network request was made",
  },
  "type": "condition",
}
`;
